# psyst

./: Makefile  README.md  TODO.md  setup.cfg
example/: compas.db  complete-grid.yaml  config.yaml  fake.db
psyst/: __init__.py  base.py  matchmaking.py
psyst/binaries/: __init__.py  compas.py  mesa.py
psyst/io/: __init__.py  logger.py
